finalizado pacote util